[workspace]
members = [
	"frontend"
]

[package]
name = "atorrlinker"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "atorrlinker-undup"
path = "src/undup/cli.rs"

[[bin]]
name = "atorrlinker"
path = "src/service/service.rs"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive"] }
directories = "6.0.0"
env_logger = "0.11.8"
log = "0.4.28"
rocket = "0.5.1"
rocket_dyn_templates = { version = "0.2.0", features = ["handlebars"] }
rusqlite = "0.37.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
thiserror = "2.0.16"

[dev-dependencies]
uuid = { version = "1.18.1", features = ["v4"] }
tempfile = "3"

[build-dependencies]
